src/objects/TestResult__c.object
<CustomObject>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <label>Percentage</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Course_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Course Profile</label>
        <referenceTo>User_Course_Profile__c</referenceTo>
        <relationshipLabel>TestResult</relationshipLabel>
        <relationshipName>TestResult</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TestResult</label>
    <nameField>
        <label>Name Test</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TestResult</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>